<resources>
    <string name="app_name">PhoneContact_TestHipe</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="show_button">Save</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="contact">Pilih Kontak</string>
</resources>
